@@ -11,10 +11,10 @@
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
 # Copyright (c) 2001-2002 David Gravereaux.
-# Copyright (c) 2003-2005 Patrick Thoyts
+# Copyright (c) 2003-2008 Patrick Thoyts
 #
 #------------------------------------------------------------------------------
-# RCS: @(#) $Id: rules.vc,v 1.2 2007/05/03 22:22:27 patthoyts Exp $
+# RCS: @(#) $Id: rules.vc,v 1.3 2009/05/04 22:46:17 patthoyts Exp $
 #------------------------------------------------------------------------------
 
 !ifndef _RULES_VC
@@ -34,7 +34,11 @@ _INSTALLDIR	= $(INSTALLDIR:/=\)
 !endif
 
 !ifndef MACHINE
-MACHINE		= IX86
+!if "$(CPU)" == "" || "$(CPU)" == "i386"
+MACHINE         = IX86
+!else
+MACHINE         = $(CPU)
+!endif
 !endif
 
 !ifndef CFG_ENCODING
@@ -87,7 +91,7 @@ MKDIR   = mkdir
 !message *** Compiler has 'Optimizations'
 OPTIMIZING	= 1
 !else
-!message *** Compiler doesn't have 'Optimizations'
+!message *** Compiler does not have 'Optimizations'
 OPTIMIZING	= 0
 !endif
 
@@ -144,7 +148,7 @@ OPTIMIZATIONS  = $(OPTIMIZATIONS) -YX
 !message *** Compiler has 'Pentium 0x0f fix'
 COMPILERFLAGS  = $(COMPILERFLAGSS) -QI0f
 !else
-!message *** Compiler doesn't have 'Pentium 0x0f fix'
+!message *** Compiler does not have 'Pentium 0x0f fix'
 !endif
 !endif
 
@@ -164,7 +168,7 @@ COMPILERFLAGS   = $(COMPILERFLAGS) -QIA64_Bx
 !message *** Linker has 'Win98 alignment problem'
 ALIGN98_HACK	= 1
 !else
-!message *** Linker doesn't have 'Win98 alignment problem'
+!message *** Linker does not have 'Win98 alignment problem'
 ALIGN98_HACK	= 0
 !endif
 !else
@@ -188,15 +192,21 @@ VCVER=0
 !if ![echo VCVERSION=_MSC_VER > vercl.x] \
     && ![cl -nologo -TC -P vercl.x $(ERRNULL)]
 !include vercl.i
-!if $(VCVERSION) >= 1400
+!if $(VCVERSION) >= 1500
+VCVER=9
+!elseif $(VCVERSION) >= 1400
 VCVER=8
-_VC_MANIFEST_EMBED_EXE=if exist $@.manifest mt -nologo -manifest $@.manifest -outputresource:$@;1
-_VC_MANIFEST_EMBED_DLL=if exist $@.manifest mt -nologo -manifest $@.manifest -outputresource:$@;2
 !elseif $(VCVERSION) >= 1300
 VCVER=7
 !elseif $(VCVERSION) >= 1200
 VCVER=6
 !endif
+!endif
+
+# Since MSVC8 we must deal with manifest resources.
+!if $(VCVERSION) >= 1400
+_VC_MANIFEST_EMBED_EXE=if exist $@.manifest mt -nologo -manifest $@.manifest -outputresource:$@;1
+_VC_MANIFEST_EMBED_DLL=if exist $@.manifest mt -nologo -manifest $@.manifest -outputresource:$@;2
 !endif
 
 #----------------------------------------------------------
@@ -386,7 +396,7 @@ TCL_COMPILE_DEBUG   = 0
 
 !if "$(CHECKS)" == "" || [nmakehlp -f "$(CHECKS)" "none"]
 TCL_NO_DEPRECATED	    = 0
-FULLWARNINGS		    = 0
+WARNINGS		    = -W3
 !else
 !if [nmakehlp -f $(CHECKS) "nodep"]
 !message *** Doing nodep check
@@ -396,18 +406,24 @@ TCL_NO_DEPRECATED	    = 0
 !endif
 !if [nmakehlp -f $(CHECKS) "fullwarn"]
 !message *** Doing full warnings check
-FULLWARNINGS		    = 1
+WARNINGS		    = -W4
+!if [nmakehlp -l -warn:3]
+LINKERFLAGS		    = $(LINKERFLAGS) -warn:3
+!endif
 !else
-FULLWARNINGS		    = 0
+WARNINGS		    = -W3
+!endif
+!if [nmakehlp -f $(CHECKS) "64bit"] && [nmakehlp -c -Wp64]
+!message *** Doing 64bit portability warnings
+WARNINGS		    = $(WARNINGS) -Wp64
 !endif
 !endif
-
 
 #----------------------------------------------------------
 # Set our defines now armed with our options.
 #----------------------------------------------------------
 
-OPTDEFINES	= -DTCL_CFGVAL_ENCODING=$(CFG_ENCODING)
+OPTDEFINES	= -DTCL_CFGVAL_ENCODING=$(CFG_ENCODING) -DSTDC_HEADERS
 
 !if $(TCL_MEM_DEBUG)
 OPTDEFINES	= $(OPTDEFINES) -DTCL_MEM_DEBUG
@@ -439,7 +455,7 @@ OPTDEFINES	= $(OPTDEFINES) -DTCL_CFG_OPTIMIZED
 !if $(PROFILE)
 OPTDEFINES	= $(OPTDEFINES) -DTCL_CFG_PROFILED
 !endif
-!if "$(MACHINE)" == "IA64"
+!if "$(MACHINE)" == "IA64" || "$(MACHINE)" == "AMD64"
 OPTDEFINES	= $(OPTDEFINES) -DTCL_CFG_DO64BIT
 !endif
 
@@ -517,6 +533,7 @@ TCL_INCLUDES	= -I"$(_TCLDIR)\generic" -I"$(_TCLDIR)\win"
 # Optionally check for Tk info for building extensions.
 #----------------------------------------------------------
 
+!ifdef PROJECT_REQUIRES_TK
 !if "$(PROJECT)" != "tcl" && "$(PROJECT)" != "tk"
 
 !if !defined(TKDIR)
@@ -558,18 +575,37 @@ TK_VERSION = $(TK_DOTVERSION:.=)
 
 !if $(TKINSTALL)
 WISH		= "$(_TKDIR)\bin\wish$(TK_VERSION)$(SUFX).exe"
+!if !exist($(WISH)) && $(TCL_THREADS)
+WISH		= "$(_TKDIR)\bin\wish$(TK_VERSION)t$(SUFX).exe"
+!endif
 TKSTUBLIB	= "$(_TKDIR)\lib\tkstub$(TK_VERSION).lib"
 TKIMPLIB	= "$(_TKDIR)\lib\tk$(TK_VERSION)$(SUFX).lib"
 TK_INCLUDES     = -I"$(_TKDIR)\include"
+TK_LIBRARY	= $(_TKDIR)\lib
 !else
 WISH		= "$(_TKDIR)\win\$(BUILDDIRTOP)\wish$(TCL_VERSION)$(SUFX).exe"
+!if !exist($(WISH)) && $(TCL_THREADS)
+WISH		= "$(_TKDIR)\win\$(BUILDDIRTOP)\wish$(TCL_VERSION)t$(SUFX).exe"
+!endif
 TKSTUBLIB	= "$(_TKDIR)\win\$(BUILDDIRTOP)\tkstub$(TCL_VERSION).lib"
 TKIMPLIB	= "$(_TKDIR)\win\$(BUILDDIRTOP)\tk$(TCL_VERSION)$(SUFX).lib"
 TK_INCLUDES     = -I"$(_TKDIR)\generic" -I"$(_TKDIR)\win" -I"$(_TKDIR)\xlib"
+TK_LIBRARY	= $(_TKDIR)\library
 !endif
 
 !endif
 !endif
+!endif
+
+
+#----------------------------------------------------------
+# Setup the fully qualified OUT_DIR path as OUT_DIR_PATH
+#----------------------------------------------------------
+!if [echo OUT_DIR_PATH = \>> version.vc] \
+    && [nmakehlp -Q "$(OUT_DIR)" >> version.vc]
+!endif
+!include version.vc
+
 
 #----------------------------------------------------------
 # Display stats being used.
@@ -580,7 +616,7 @@ TK_INCLUDES     = -I"$(_TKDIR)\generic" -I"$(_TKDIR)\win" -I"$(_TKDIR)\xlib"
 !message *** Suffix for binaries will be '$(SUFX)'
 !message *** Optional defines are '$(OPTDEFINES)'
 !message *** Compiler version $(VCVER). Target machine is $(MACHINE)
-!message *** Compiler options '$(COMPILERFLAGS) $(OPTIMIZATIONS) $(DEBUGFLAGS)'
+!message *** Compiler options '$(COMPILERFLAGS) $(OPTIMIZATIONS) $(DEBUGFLAGS) $(WARNINGS)'
 !message *** Link options '$(LINKERFLAGS)'
 
 !endif
